--- a/css/styles.css
+++ b/css/styles.css
@@ -624,6 +624,7 @@ img {
   line-height: 1.14;
   margin: 0;
   text-transform: uppercase;
+  margin-bottom: 20px;
 }
 
 .footer .social-link {
@@ -646,7 +647,6 @@ img {
 .footer-input {
   width: 358px;
   height: 50px;
-  margin-top: 20px;
   margin-right: 12px;
   border-radius: 4px;
   padding: 15px 16px;
