делает вложенность селекторов

--- a/sass/components/_direction.scss
+++ b/sass/components/_direction.scss
@@ -9,10 +9,10 @@
 .direction-item {
   flex-basis: calc((100% - 3 * 30px) / 3);
   position: relative;
-}
 
-.direction-item:not(:last-child) {
-  margin-right: 30px;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .direction {
