--- a/css/main.css
+++ b/css/main.css
@@ -351,7 +351,6 @@ img {
 }
 
 .header-nav-menu .current {
-  /* border-bottom: 2px solid var(--accent-color); */
   color: var(--accent-color);
 }
 
@@ -394,11 +393,6 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-nav-menu-link:hover,
-.header-nav-menu-link:focus {
-  color: var(--accent-color);
-}
-
 .header-contact-mailto:hover,
 .header-contact-mailto:focus {
   color: var(--accent-color);
@@ -417,6 +411,10 @@ img {
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-nav-menu-link:hover, .header-nav-menu-link:focus {
+  color: var(--accent-color);
 }
 
 .header-contact a {
@@ -443,16 +441,15 @@ img {
   border-radius: 2px;
 }
 
-.icon-adress:hover,
-.icon-adress:focus {
-  fill: var(--accent-color);
-}
-
 .icon-adress {
   width: 16px;
   height: 16px;
   margin-right: 10px;
   fill: currentColor;
+}
+
+.icon-adress:hover, .icon-adress:focus {
+  fill: var(--accent-color);
 }
 
 .header-contact .icon-adress {
@@ -467,10 +464,6 @@ img {
   color: var(--accent-color);
   text-decoration: none;
   display: block;
-  margin-right: 93px;
-}
-
-.header-nav-menu .header-logo {
   margin-right: 93px;
 }
 
@@ -550,13 +543,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button:hover,
-.button:focus {
-  background-color: var(--link-services-color);
-}
-
-.button.primery:hover,
-.button.primery:focus {
+.button:hover, .button:focus {
   background-color: var(--link-services-color);
 }
 
@@ -674,14 +661,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:hover,
-.social-link:focus {
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-}
-
-.section-team .social-link:hover,
-.section-team .social-link:focus {
+.social-link:hover, .social-link:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
@@ -778,8 +758,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients-link:hover, .clients-link:focus {
   border: 1px solid var(--accent-color);
   color: var(--accent-color);
 }
@@ -795,6 +774,19 @@ img {
   padding-top: 60px;
   padding-bottom: 60px;
   color: var(--primary-white-color);
+}
+
+.footer .social-link {
+  color: var(--primary-white-color);
+  background-color: var(--icon-social-bg);
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer .social-link:hover,
+.footer .social-link:focus {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
 }
 
 .footer .container {
@@ -856,19 +848,6 @@ img {
   margin-bottom: 20px;
 }
 
-.footer .social-link {
-  color: var(--primary-white-color);
-  background-color: var(--icon-social-bg);
-  border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer .social-link:hover,
-.footer .social-link:focus {
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-}
-
 .mailings {
   margin-left: 93px;
 }
@@ -887,8 +866,7 @@ img {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-input:hover,
-.footer-input:focus {
+.footer-input:hover, .footer-input:focus {
   border: 1px solid var(--accent-color);
 }
 
@@ -909,8 +887,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.submit-btn:hover,
-.submit-btn:focus {
+.submit-btn:hover, .submit-btn:focus {
   background-color: var(--link-services-color);
 }
 
@@ -948,13 +925,18 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.service-link:hover,
-.service-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 .service-link {
   display: block;
+}
+
+.service-link:hover .text-overlay,
+.service-link:focus .text-overlay {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.service-link:hover, .service-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .service-jpg-style {
@@ -984,8 +966,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filtr-btn:hover,
-.filtr-btn:focus {
+.filtr-btn:hover, .filtr-btn:focus {
   background-color: var(--link-services-color);
   color: var(--primary-white-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -1011,12 +992,6 @@ img {
   letter-spacing: 0.03em;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.service-link:hover .text-overlay,
-.service-link:focus .text-overlay {
-  opacity: 1;
-  transform: translateY(0);
 }
 
 .service-title {
@@ -1049,15 +1024,15 @@ img {
   transition: opacity 250ms linear, visibility 250ms linear;
 }
 
+.backdrop.is-hidden .modal-form {
+  transform: perspective(600px) translate(-50%, -150%) rotateX(45deg);
+  opacity: 1;
+}
+
 .is-hidden {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
-}
-
-.backdrop.is-hidden .modal-form {
-  transform: perspective(600px) translate(-50%, -150%) rotateX(45deg);
-  opacity: 1;
 }
 
 .modal-form {
@@ -1089,11 +1064,6 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.submint-btn:focus,
-.submint-btn:hover {
-  background-color: var(--link-services-color);
-}
-
 .icon-close {
   width: 11px;
   height: 11px;
@@ -1119,13 +1089,13 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
 }
 
-.form-field .form-input {
-  padding: 12px 35px;
+.form-input:hover, .form-input:focus {
+  border: 1px solid var(--accent-color);
 }
 
-.form-input:hover,
-.form-input:focus {
-  border: 1px solid var(--accent-color);
+.form-input:hover + .form-icon,
+.form-input:focus + .form-icon {
+  fill: var(--accent-color);
 }
 
 .submint-btn {
@@ -1147,6 +1117,10 @@ img {
   cursor: pointer;
 }
 
+.submint-btn:focus, .submint-btn:hover {
+  background-color: var(--link-services-color);
+}
+
 .submit-btn:hover,
 .submit-btn:focus {
   background-color: var(--link-services-color);
@@ -1161,14 +1135,8 @@ img {
   margin-bottom: 10px;
 }
 
-.form-field .form-label {
-  display: block;
-  margin-bottom: 4px;
-}
-
-.form-label .form-input:hover,
-.form-label .form-input:focus {
-  border: 1px solid var(--accent-color);
+.form-field .form-input {
+  padding: 12px 35px;
 }
 
 .form-field textarea {
@@ -1183,13 +1151,23 @@ img {
   resize: none;
 }
 
+.form-field textarea:hover,
+.form-field textarea:focus {
+  border: 1px solid var(--accent-color);
+}
+
+.form-field .form-label {
+  display: block;
+  margin-bottom: 4px;
+}
+
 .form-label {
   margin-top: 10px;
   margin-bottom: 4px;
 }
 
-.form-field textarea:hover,
-.form-field textarea:focus {
+.form-label .form-input:hover,
+.form-label .form-input:focus {
   border: 1px solid var(--accent-color);
 }
 
@@ -1209,6 +1187,12 @@ img {
   line-height: 1.71;
 }
 
+.checkbox-label input:checked ~ .icon-check {
+  border: none;
+  background-color: var(--accent-color);
+  background-origin: border-box;
+}
+
 .checkbox-label a {
   color: var(--accent-color);
   margin-left: 4px;
@@ -1226,11 +1210,6 @@ img {
   top: 11px;
   left: 12px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-input:hover + .form-icon,
-.form-input:focus + .form-icon {
-  fill: var(--accent-color);
 }
 
 .visually-hidden {
@@ -1253,12 +1232,6 @@ img {
   border: 0.2px solid var(--title-text-color);
   border-radius: 2px;
   fill: var(--primary-white-color);
-}
-
-.checkbox-label input:checked ~ .icon-check {
-  border: none;
-  background-color: var(--accent-color);
-  background-origin: border-box;
 }
 
 input:focus,
