--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,24 +3,38 @@
   padding-top: 60px;
   padding-bottom: 60px;
   color: var(--primary-white-color);
+
+  & .social-link {
+    color: var(--primary-white-color);
+    background-color: var(--icon-social-bg);
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  & .social-link:hover,
+  & .social-link:focus {
+    color: var(--primary-white-color);
+    background-color: var(--accent-color);
+  }
+  & .container {
+    display: flex;
+    align-items: baseline;
+  }
+
+  & .a {
+    font-style: normal;
+  }
 }
 
-.footer .container {
-  display: flex;
-  align-items: baseline;
-}
+.footer-address-item {
+  & a:hover,
+  & a:focus {
+    color: var(--accent-color);
+  }
 
-.footer .a {
-  font-style: normal;
-}
-
-.footer-address-item a:hover,
-.footer-address-item a:focus {
-  color: var(--accent-color);
-}
-
-.footer-address-item:not(:last-child) {
-  margin-bottom: 9px;
+  &:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
 
 .footer-contact {
@@ -64,19 +78,6 @@
   margin-bottom: 20px;
 }
 
-.footer .social-link {
-  color: var(--primary-white-color);
-  background-color: var(--icon-social-bg);
-  border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer .social-link:hover,
-.footer .social-link:focus {
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-}
-
 .mailings {
   margin-left: 93px;
 }
@@ -93,11 +94,11 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   background: transparent;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.footer-input:hover,
-.footer-input:focus {
-  border: 1px solid var(--accent-color);
+  &:hover,
+  &:focus {
+    border: 1px solid var(--accent-color);
+  }
 }
 
 .submit-btn {
@@ -116,11 +117,11 @@
   color: var(--primary-white-color);
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.submit-btn:hover,
-.submit-btn:focus {
-  background-color: var(--link-services-color);
+  &:hover,
+  &:focus {
+    background-color: var(--link-services-color);
+  }
 }
 
 .footer-btn-icon {
