--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,10 +1,10 @@
 .header {
   background-color: var(--primary-white-color);
   border-bottom: 1px solid var(--border-color);
-}
 
-.header .container {
-  display: flex;
+  & .container {
+    display: flex;
+  }
 }
 
 .container > .header-nav-menu {
@@ -12,7 +12,6 @@
 }
 
 .header-nav-menu .current {
-  /* border-bottom: 2px solid var(--accent-color); */
   color: var(--accent-color);
 }
 
@@ -55,11 +54,6 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-nav-menu-link:hover,
-.header-nav-menu-link:focus {
-  color: var(--accent-color);
-}
-
 .header-contact-mailto:hover,
 .header-contact-mailto:focus {
   color: var(--accent-color);
@@ -78,6 +72,11 @@
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .header-contact a {
@@ -104,16 +103,16 @@
   border-radius: 2px;
 }
 
-.icon-adress:hover,
-.icon-adress:focus {
-  fill: var(--accent-color);
-}
-
 .icon-adress {
   width: 16px;
   height: 16px;
   margin-right: 10px;
   fill: currentColor;
+
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
 }
 
 .header-contact .icon-adress {
