--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -7,17 +7,17 @@
   z-index: 100;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms linear, visibility 250ms linear;
+
+  &.is-hidden .modal-form {
+    transform: perspective(600px) translate(-50%, -150%) rotateX(45deg);
+    opacity: 1;
+  }
 }
 
 .is-hidden {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
-}
-
-.backdrop.is-hidden .modal-form {
-  transform: perspective(600px) translate(-50%, -150%) rotateX(45deg);
-  opacity: 1;
 }
 
 .modal-form {
@@ -49,11 +49,6 @@
   cursor: pointer;
   border-radius: 50%;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.submint-btn:focus,
-.submint-btn:hover {
-  background-color: var(--link-services-color);
 }
 
 .icon-close {
