--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -15,18 +15,12 @@
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.social-link:hover,
-.social-link:focus {
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-}
-
-.section-team .social-link:hover,
-.section-team .social-link:focus {
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--primary-white-color);
+    background-color: var(--accent-color);
+  }
 }
 
 .section-team {
@@ -56,10 +50,10 @@
   /* drop-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-}
 
-.team-item + .team-item {
-  margin-left: 30px;
+  & + & {
+    margin-left: 30px;
+  }
 }
 
 .team-title {
