--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -52,14 +52,14 @@
   color: var(--primary-white-color);
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: var(--link-services-color);
+  }
 }
 
-.button:hover,
-.button:focus {
-  background-color: var(--link-services-color);
-}
-
-.button.primery:hover,
-.button.primery:focus {
-  background-color: var(--link-services-color);
-}
+// .button.primery:hover,
+// .button.primery:focus {
+//   background-color: var(--link-services-color);
+// }
