--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -7,10 +7,10 @@
 
 .features-item {
   flex-basis: calc((100% - 3 * 30px) / 4);
+}
 
-  & + & {
-    margin-left: 30px;
-  }
+.features-item + .features-item {
+  margin-left: 30px;
 }
 
 .visually-hidden {
