--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,26 +4,27 @@
   padding-bottom: 60px;
   color: var(--primary-white-color);
 
-  & .social-link {
-    color: var(--primary-white-color);
-    background-color: var(--icon-social-bg);
-    border-radius: 50%;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
   & .social-link:hover,
   & .social-link:focus {
     color: var(--primary-white-color);
     background-color: var(--accent-color);
   }
-  & .container {
-    display: flex;
-    align-items: baseline;
-  }
+}
 
-  & .a {
-    font-style: normal;
-  }
+.footer .social-link {
+  color: var(--primary-white-color);
+  background-color: var(--icon-social-bg);
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer .a {
+  font-style: normal;
+}
+
+.footer .container {
+  display: flex;
+  align-items: baseline;
 }
 
 .footer-address-item {
