--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -50,10 +50,10 @@
   /* drop-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+}
 
-  & + & {
-    margin-left: 30px;
-  }
+.team-item + .team-item {
+  margin-left: 30px;
 }
 
 .team-title {
