--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,4 +1,4 @@
-.clients-title {
+.clients__title {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
@@ -6,16 +6,16 @@
   margin-bottom: 50px;
 }
 
-.clients-list {
+.clients__list {
   display: flex;
   padding: 0;
 }
 
-.clients-item:not(:last-child) {
+.clients__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.clients-link {
+.clients__link {
   display: inline-flex;
   width: 170px;
   height: 92px;
@@ -34,7 +34,7 @@
   }
 }
 
-.clients-icon {
+.clients__icon {
   width: 106px;
   height: 60px;
   fill: currentColor;
