--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,3 +1,53 @@
+.team {
+  background-color: var(--secondary-bg-color);
+}
+
+.team__list {
+  display: flex;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+}
+
+.team__item {
+  flex-basis: calc((100% - 3 * 30px) / 4);
+  text-align: center;
+  background-color: var(--primary-white-color);
+  border-radius: 0 0 4px 4px;
+  /* drop-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.team__item + .team__item {
+  margin-left: 30px;
+}
+
+.team__title {
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  color: var(--title-text-color);
+  margin-bottom: 50px;
+}
+
+.team__name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  color: var(--title-text-color);
+  margin-bottom: 10px;
+}
+
+.team__specialty {
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .social-list {
   display: flex;
   justify-content: space-between;
@@ -5,7 +55,7 @@
   margin-top: 20px;
 }
 
-.social-link {
+.social-list__link {
   display: inline-flex;
   width: 44px;
   height: 44px;
@@ -23,65 +73,15 @@
   }
 }
 
-.section-team {
-  background-color: var(--secondary-bg-color);
-}
-
-.social-item:not(:last-child) {
+.social-list__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.foto {
+.team__cards {
   padding: 30px 24px;
 }
 
-.team {
-  display: flex;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding: 0;
-}
-
-.team-item {
-  flex-basis: calc((100% - 3 * 30px) / 4);
-  text-align: center;
-  background-color: var(--primary-white-color);
-  border-radius: 0 0 4px 4px;
-  /* drop-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-
-.team-item + .team-item {
-  margin-left: 30px;
-}
-
-.team-title {
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  color: var(--title-text-color);
-  margin-bottom: 50px;
-}
-
-.team-expert {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  color: var(--title-text-color);
-  margin-bottom: 10px;
-}
-
-.team-specialty {
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.icon-social {
+.social-list__icon {
   width: 20px;
   height: 20px;
   fill: currentColor;
