--- a/css/main.css
+++ b/css/main.css
@@ -346,24 +346,24 @@ img {
   display: flex;
 }
 
-.container > .header-nav-menu {
+.container > .header-meny {
   margin-left: auto;
 }
 
-.header-nav-menu .current {
+.header-meny .current {
   color: var(--accent-color);
 }
 
-.header-nav {
+.header-navigation {
   display: flex;
   align-items: center;
 }
 
-.header-nav-menu-item:not(:first-child) {
+.header-meny__item:not(:first-child) {
   margin-left: 50px;
 }
 
-.header-nav-menu,
+.header-meny,
 .header-contact {
   display: flex;
   margin-top: 0px;
@@ -371,7 +371,7 @@ img {
   padding: 0;
 }
 
-.header-contact-item:not(:first-child) {
+.header-contact__item:not(:first-child) {
   margin-left: 50px;
 }
 
@@ -379,32 +379,24 @@ img {
   margin-left: auto;
 }
 
-.header-nav-menu .header-nav-menu-link {
+.header-meny__link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 }
 
-.header-contact .header-contact-mailto,
-.header-contact-tel {
+.header-contact__link {
   display: inline-flex;
   padding-top: 32px;
   padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-contact-mailto:hover,
-.header-contact-mailto:focus {
-  color: var(--accent-color);
-  fill: var(--accent-color);
-}
-
-.header-contact-tel:hover,
-.header-contact-tel:focus {
+.header-contact__link:hover, .header-contact__link:focus {
   color: var(--accent-color);
 }
 
-.header-nav-menu-link {
+.header-meny__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -413,7 +405,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-nav-menu-link:hover, .header-nav-menu-link:focus {
+.header-meny__link:hover, .header-meny__link:focus {
   color: var(--accent-color);
 }
 
@@ -425,11 +417,11 @@ img {
   color: var(--primary-text-color);
 }
 
-.header-nav-menu-item {
+.header-meny__item {
   position: relative;
 }
 
-.header-nav-menu .header-nav-menu-link.current::after {
+.header-meny__link.current::after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -441,22 +433,19 @@ img {
   border-radius: 2px;
 }
 
-.icon-adress {
+.header-contact__icon {
+  display: inline-flex;
   width: 16px;
   height: 16px;
   margin-right: 10px;
   fill: currentColor;
 }
 
-.icon-adress:hover, .icon-adress:focus {
+.header-contact__icon:hover, .header-contact__icon:focus {
   fill: var(--accent-color);
 }
 
-.header-contact .icon-adress {
-  display: inline-flex;
-}
-
-.header-logo {
+.logo {
   font-weight: 700;
   font-family: 'Raleway', sans-serif;
   font-size: 26px;
@@ -464,36 +453,25 @@ img {
   color: var(--accent-color);
   text-decoration: none;
   display: block;
+}
+
+.header__logo {
   margin-right: 93px;
 }
 
-.header-logo-studio {
-  font-family: 'Raleway', sans-serif;
-  font-size: 26px;
-  line-height: 1.19;
+.header__logo--black {
   color: var(--primary-black-color);
 }
 
-.footer-logo {
-  font-family: 'Raleway', sans-serif;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
-  display: block;
+.footer__logo {
   margin-bottom: 20px;
 }
 
-.footer-logo-studio {
-  font-family: 'Raleway', sans-serif;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 1.19;
+.footer__logo--white {
   color: var(--primary-white-color);
 }
 
-.overlay {
+.hero__overlay {
   max-width: 1600px;
   height: 600px;
   margin-left: auto;
@@ -507,7 +485,7 @@ img {
   text-align: center;
 }
 
-.title {
+.hero {
   padding-top: 200px;
   padding-bottom: 200px;
   background-color: var(--primary-color-hf);
@@ -515,7 +493,7 @@ img {
   text-align: center;
 }
 
-.title-text {
+.hero__text {
   margin-top: 0;
   margin-bottom: 30px;
   font-weight: 900;
@@ -525,7 +503,7 @@ img {
   text-transform: uppercase;
 }
 
-.button {
+.hero__button {
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 32px;
@@ -543,26 +521,26 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button:hover, .button:focus {
+.hero__button:hover, .hero__button:focus {
   background-color: var(--link-services-color);
 }
 
-.features {
+.features__list {
   display: flex;
   margin-top: 0;
   margin-bottom: 0;
   padding: 0;
 }
 
-.features-item {
+.features__item {
   flex-basis: calc((100% - 3 * 30px) / 4);
 }
 
-.features-item + .features-item {
+.features__item + .features__item {
   margin-left: 30px;
 }
 
-.visually-hidden {
+.features__visually-hidden {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -572,7 +550,7 @@ img {
   margin-bottom: 50px;
 }
 
-.features-title {
+.features__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -581,14 +559,14 @@ img {
   margin-bottom: 10px;
 }
 
-.features-text {
+.features__text {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 1.71;
   color: var(--title-text-color);
 }
 
-.features-icon {
+.features__icon-block {
   display: flex;
   height: 120px;
   margin-bottom: 30px;
@@ -598,12 +576,12 @@ img {
   border-radius: 4px;
 }
 
-.features-icon-item {
+.features__icon {
   width: 70px;
   height: 70px;
 }
 
-.direction-title {
+.direction__title {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
@@ -611,21 +589,21 @@ img {
   margin-bottom: 50px;
 }
 
-.direction-item {
+.direction__item {
   flex-basis: calc((100% - 3 * 30px) / 3);
   position: relative;
 }
 
-.direction-item:not(:last-child) {
+.direction__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.direction {
+.direction__list {
   display: flex;
   padding: 0;
 }
 
-.direction-overlay {
+.direction__overlay {
   position: absolute;
   width: 100%;
   height: 70px;
@@ -643,6 +621,55 @@ img {
   background-color: var(--bg-overlay);
 }
 
+.team {
+  background-color: var(--secondary-bg-color);
+}
+
+.team__list {
+  display: flex;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+}
+
+.team__item {
+  flex-basis: calc((100% - 3 * 30px) / 4);
+  text-align: center;
+  background-color: var(--primary-white-color);
+  border-radius: 0 0 4px 4px;
+  /* drop-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.team__item + .team__item {
+  margin-left: 30px;
+}
+
+.team__title {
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  color: var(--title-text-color);
+  margin-bottom: 50px;
+}
+
+.team__name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  color: var(--title-text-color);
+  margin-bottom: 10px;
+}
+
+.team__specialty {
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .social-list {
   display: flex;
   justify-content: space-between;
@@ -650,7 +677,7 @@ img {
   margin-top: 20px;
 }
 
-.social-link {
+.social-list__link {
   display: inline-flex;
   width: 44px;
   height: 44px;
@@ -661,75 +688,26 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:hover, .social-link:focus {
+.social-list__link:hover, .social-list__link:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
 
-.section-team {
-  background-color: var(--secondary-bg-color);
-}
-
-.social-item:not(:last-child) {
+.social-list__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.foto {
+.team__cards {
   padding: 30px 24px;
 }
 
-.team {
-  display: flex;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding: 0;
-}
-
-.team-item {
-  flex-basis: calc((100% - 3 * 30px) / 4);
-  text-align: center;
-  background-color: var(--primary-white-color);
-  border-radius: 0 0 4px 4px;
-  /* drop-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-
-.team-item + .team-item {
-  margin-left: 30px;
-}
-
-.team-title {
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  color: var(--title-text-color);
-  margin-bottom: 50px;
-}
-
-.team-expert {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  color: var(--title-text-color);
-  margin-bottom: 10px;
-}
-
-.team-specialty {
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.icon-social {
+.social-list__icon {
   width: 20px;
   height: 20px;
   fill: currentColor;
 }
 
-.clients-title {
+.clients__title {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
@@ -737,16 +715,16 @@ img {
   margin-bottom: 50px;
 }
 
-.clients-list {
+.clients__list {
   display: flex;
   padding: 0;
 }
 
-.clients-item:not(:last-child) {
+.clients__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.clients-link {
+.clients__link {
   display: inline-flex;
   width: 170px;
   height: 92px;
@@ -758,12 +736,12 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover, .clients-link:focus {
+.clients__link:hover, .clients__link:focus {
   border: 1px solid var(--accent-color);
   color: var(--accent-color);
 }
 
-.clients-icon {
+.clients__icon {
   width: 106px;
   height: 60px;
   fill: currentColor;
@@ -776,13 +754,13 @@ img {
   color: var(--primary-white-color);
 }
 
-.footer .social-link:hover,
-.footer .social-link:focus {
+.footer .social-list__link:hover,
+.footer .social-list__link:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
 
-.footer .social-link {
+.footer .social-list__link {
   color: var(--primary-white-color);
   background-color: var(--icon-social-bg);
   border-radius: 50%;
@@ -836,11 +814,11 @@ img {
   margin-bottom: 9px;
 }
 
-.footer-block {
+.footer-social {
   margin-left: 70px;
 }
 
-.footer-text {
+.footer__text {
   font-weight: 700;
   line-height: 1.14;
   margin: 0;
@@ -849,7 +827,7 @@ img {
 }
 
 .mailings {
-  margin-left: 93px;
+  margin-left: 160px;
 }
 
 .footer-input {
