--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,19 +1,19 @@
-.features {
+.features__list {
   display: flex;
   margin-top: 0;
   margin-bottom: 0;
   padding: 0;
 }
 
-.features-item {
+.features__item {
   flex-basis: calc((100% - 3 * 30px) / 4);
 }
 
-.features-item + .features-item {
+.features__item + .features__item {
   margin-left: 30px;
 }
 
-.visually-hidden {
+.features__visually-hidden {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -23,7 +23,7 @@
   margin-bottom: 50px;
 }
 
-.features-title {
+.features__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -32,14 +32,14 @@
   margin-bottom: 10px;
 }
 
-.features-text {
+.features__text {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 1.71;
   color: var(--title-text-color);
 }
 
-.features-icon {
+.features__icon-block {
   display: flex;
   height: 120px;
   margin-bottom: 30px;
@@ -49,7 +49,7 @@
   border-radius: 4px;
 }
 
-.features-icon-item {
+.features__icon {
   width: 70px;
   height: 70px;
 }
