--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -7,24 +7,24 @@
   display: flex;
 }
 
-.container > .header-nav-menu {
+.container > .header-meny {
   margin-left: auto;
 }
 
-.header-nav-menu .current {
+.header-meny .current {
   color: var(--accent-color);
 }
 
-.header-nav {
+.header-navigation {
   display: flex;
   align-items: center;
 }
 
-.header-nav-menu-item:not(:first-child) {
+.header-meny__item:not(:first-child) {
   margin-left: 50px;
 }
 
-.header-nav-menu,
+.header-meny,
 .header-contact {
   display: flex;
   margin-top: 0px;
@@ -32,7 +32,7 @@
   padding: 0;
 }
 
-.header-contact-item:not(:first-child) {
+.header-contact__item:not(:first-child) {
   margin-left: 50px;
 }
 
@@ -40,32 +40,25 @@
   margin-left: auto;
 }
 
-.header-nav-menu .header-nav-menu-link {
+.header-meny__link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 }
 
-.header-contact .header-contact-mailto,
-.header-contact-tel {
+.header-contact__link {
   display: inline-flex;
   padding-top: 32px;
   padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
-.header-contact-mailto:hover,
-.header-contact-mailto:focus {
-  color: var(--accent-color);
-  fill: var(--accent-color);
-}
-
-.header-contact-tel:hover,
-.header-contact-tel:focus {
-  color: var(--accent-color);
-}
-
-.header-nav-menu-link {
+.header-meny__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -87,11 +80,11 @@
   color: var(--primary-text-color);
 }
 
-.header-nav-menu-item {
+.header-meny__item {
   position: relative;
 }
 
-.header-nav-menu .header-nav-menu-link.current::after {
+.header-meny__link.current::after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -103,7 +96,8 @@
   border-radius: 2px;
 }
 
-.icon-adress {
+.header-contact__icon {
+  display: inline-flex;
   width: 16px;
   height: 16px;
   margin-right: 10px;
@@ -113,8 +107,4 @@
   &:focus {
     fill: var(--accent-color);
   }
-}
-
-.header-contact .icon-adress {
-  display: inline-flex;
 }
