--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@
 @import './components/body';
 @import './components/header';
 @import './components/logo';
-@import './components/title';
+@import './components/hero';
 @import './components/features';
 @import './components/direction';
 @import './components/team';
