--- a/css/main.css
+++ b/css/main.css
@@ -760,6 +760,10 @@ img {
   background-color: var(--accent-color);
 }
 
+.social-list__footer {
+  display: flex;
+}
+
 .footer .social-list__link {
   color: var(--primary-white-color);
   background-color: var(--icon-social-bg);
