--- a/css/main.css
+++ b/css/main.css
@@ -780,21 +780,21 @@ img {
   align-items: baseline;
 }
 
-.footer-address-item a:hover,
-.footer-address-item a:focus {
+.footer-contact__item a:hover,
+.footer-contact__item a:focus {
   color: var(--accent-color);
 }
 
-.footer-address-item:not(:last-child) {
+.footer-contact__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.footer-contact {
+.footer-contact__list {
   line-height: 1.71;
   padding: 0;
 }
 
-.footer-address-link {
+.footer-contact__link {
   margin-top: 0;
   margin-bottom: 9px;
   font-weight: normal;
@@ -804,8 +804,8 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-address-mailto,
-.footer-address-tel {
+.footer-contact__mailto,
+.footer-contact__tel {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
