--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -31,7 +31,7 @@
   align-items: baseline;
 }
 
-.footer-address-item {
+.footer-contact__item {
   & a:hover,
   & a:focus {
     color: var(--accent-color);
@@ -42,12 +42,12 @@
   }
 }
 
-.footer-contact {
+.footer-contact__list {
   line-height: 1.71;
   padding: 0;
 }
 
-.footer-address-link {
+.footer-contact__link {
   margin-top: 0;
   margin-bottom: 9px;
   font-weight: normal;
@@ -57,8 +57,8 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-address-mailto,
-.footer-address-tel {
+.footer-contact__mailto,
+.footer-contact__tel {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
