--- a/css/main.css
+++ b/css/main.css
@@ -888,7 +888,7 @@ img {
   text-align: center;
 }
 
-.filtr-item:not(:last-child) {
+.filtr__item:not(:last-child) {
   margin-right: 8px;
 }
 
@@ -900,35 +900,35 @@ img {
   margin-bottom: calc(-1 * var(--jpg-margin));
 }
 
-.service-item {
+.service__item {
   flex-basis: calc(100% / 3 - var(--jpg-margin));
   margin-right: var(--jpg-margin);
   margin-bottom: var(--jpg-margin);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.service-link {
+.service__link {
   display: block;
 }
 
-.service-link:hover .text-overlay,
-.service-link:focus .text-overlay {
+.service__link:hover .text-overlay,
+.service__link:focus .text-overlay {
   opacity: 1;
   transform: translateY(0);
 }
 
-.service-link:hover, .service-link:focus {
+.service__link:hover, .service__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.service-jpg-style {
+.service__jpg-style {
   padding: 20px 24px;
   border-bottom: 1px solid var(--portfolio-bg);
   border-left: 1px solid var(--portfolio-bg);
   border-right: 1px solid var(--portfolio-bg);
 }
 
-.filtr-btn {
+.filtr__btn {
   border-radius: 4px;
   padding-top: 6px;
   padding-bottom: 6px;
@@ -948,13 +948,13 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filtr-btn:hover, .filtr-btn:focus {
+.filtr__btn:hover, .filtr__btn:focus {
   background-color: var(--link-services-color);
   color: var(--primary-white-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.jpg-product {
+.service__block {
   position: relative;
   overflow: hidden;
 }
@@ -976,7 +976,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.service-title {
+.service__title {
   font-weight: bold;
   font-size: 18px;
   line-height: 2;
@@ -985,7 +985,7 @@ img {
   margin-bottom: 4px;
 }
 
-.service-text {
+.service__text {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.88;
