--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -1,3 +1,12 @@
+body {
+  font-size: 14px;
+  font-weight: 400;
+  color: $primary-text-color;
+  font-family: $font;
+  letter-spacing: 00.03em;
+  background-color: $primary-white-color;
+}
+
 .container {
   width: 1200px;
   margin: 0 auto;
