--- a/css/main.css
+++ b/css/main.css
@@ -1,47 +1,4 @@
 @charset "UTF-8";
-/* главный цвет фона background: #E5E5E5; */
-/* вторичный цвет фона background: #F5F4FA;
- */
-/* цвет футера color: #2F303A */
-/* цвет основной текста Р color: #757575;*/
-/* цвет текста Н1-Р3 color:#212121 ;*/
-/* белый цвет текста color: #FFFFFF;
- */
-/*  акцент синий цвет текста color: #2196F3 */
-/* цвет кнопки заказать услугу background: #188CE8;
- */
-/* цвет футера тел и эмейл color: #FFFFFF99;
- */
-:root {
-  --primary-text-color: #757575;
-  --title-text-color: #212121;
-  --accent-color: #2196f3;
-  --primary-white-color: #ffffff;
-  --primary-black-color: #000000;
-  --primary-color-hf: #2f303a;
-  --secondary-bg-color: #f5f4fa;
-  --link-services-color: #188ce8;
-  --footer-address-color: rgba(255, 255, 255, 0.6);
-  --border-color: #ececec;
-  --portfolio-bg: #eeeeee;
-  --color-bg: #e5e5e5;
-  --jpg-margin: 30px;
-  --icon: #afb1b8;
-  --icon-social-bg: rgba(255, 255, 255, 0.1);
-  --bg-overlay: rgba(47, 48, 58, 0.8);
-  --bg-portfolio-overlay: rgba(33, 150, 243, 0.9);
-  --bg-modal: rgba(0, 0, 0, 0.2);
-}
-
-body {
-  font-size: 14px;
-  font-weight: 400;
-  color: var(--primary-text-color);
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: 00.03em;
-  background-color: var(--primary-white-color);
-}
-
 /*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /* ===== ДОПОЛНЕНИЯ от Sandra Hrevtsova ===== */
 /* обнуляем дефолтные маркеры у всех маркированных списков */
@@ -334,6 +291,15 @@ summary {
   display: list-item;
 }
 
+body {
+  font-size: 14px;
+  font-weight: 400;
+  color: #757575;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 00.03em;
+  background-color: #ffffff;
+}
+
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -372,8 +338,8 @@ img {
 }
 
 .header {
-  background-color: var(--primary-white-color);
-  border-bottom: 1px solid var(--border-color);
+  background-color: #ffffff;
+  border-bottom: 1px solid #ececec;
 }
 
 .header .container {
@@ -385,7 +351,7 @@ img {
 }
 
 .header-meny .current {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .header-navigation {
@@ -427,7 +393,7 @@ img {
 }
 
 .header-contact__link:hover, .header-contact__link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .header-meny__link {
@@ -435,12 +401,12 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(--title-text-color);
+  color: #212121;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-meny__link:hover, .header-meny__link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .header-contact a {
@@ -448,7 +414,7 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(--primary-text-color);
+  color: #757575;
 }
 
 .header-meny__item {
@@ -463,7 +429,7 @@ img {
   display: block;
   width: 100%;
   height: 4px;
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   border-radius: 2px;
 }
 
@@ -476,15 +442,15 @@ img {
 }
 
 .header-contact__icon:hover, .header-contact__icon:focus {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .logo {
   font-weight: 700;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 26px;
   line-height: 1.19;
-  color: var(--accent-color);
+  color: #2196f3;
   text-decoration: none;
   display: block;
 }
@@ -494,7 +460,7 @@ img {
 }
 
 .header__logo--black {
-  color: var(--primary-black-color);
+  color: #000000;
 }
 
 .footer__logo {
@@ -502,7 +468,7 @@ img {
 }
 
 .footer__logo--white {
-  color: var(--primary-white-color);
+  color: #ffffff;
 }
 
 .hero__overlay {
@@ -510,20 +476,20 @@ img {
   height: 600px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid var(--border-color);
+  outline: 1px solid #ececec;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background/header-bg.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  color: var(--primary-white-color);
+  color: #ffffff;
   text-align: center;
 }
 
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: var(--primary-color-hf);
-  color: var(--primary-white-color);
+  background-color: #2f303a;
+  color: #ffffff;
   text-align: center;
 }
 
@@ -545,18 +511,18 @@ img {
   border-radius: 4px;
   border: none;
   font-family: inherit;
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-  color: var(--primary-white-color);
+  color: #ffffff;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero__button:hover, .hero__button:focus {
-  background-color: var(--link-services-color);
+  background-color: #188ce8;
 }
 
 .features__list {
@@ -578,7 +544,7 @@ img {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
-  color: var(--title-text-color);
+  color: #212121;
   align-items: center;
   margin-top: 0;
   margin-bottom: 50px;
@@ -589,7 +555,7 @@ img {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var(--title-text-color);
+  color: #212121;
   margin-bottom: 10px;
 }
 
@@ -597,14 +563,14 @@ img {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 1.71;
-  color: var(--title-text-color);
+  color: #212121;
 }
 
 .features__icon-block {
   display: flex;
   height: 120px;
   margin-bottom: 30px;
-  background-color: var(--secondary-bg-color);
+  background-color: #f5f4fa;
   justify-content: center;
   align-items: center;
   border-radius: 4px;
@@ -619,7 +585,7 @@ img {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  color: var(--title-text-color);
+  color: #212121;
   margin-bottom: 50px;
 }
 
@@ -651,12 +617,12 @@ img {
   line-height: 1.14;
   text-align: center;
   text-transform: uppercase;
-  color: var(--primary-white-color);
-  background-color: var(--bg-overlay);
+  color: #ffffff;
+  background-color: rgba(47, 48, 58, 0.8);
 }
 
 .team {
-  background-color: var(--secondary-bg-color);
+  background-color: #f5f4fa;
 }
 
 .team__list {
@@ -669,7 +635,7 @@ img {
 .team__item {
   flex-basis: calc((100% - 3 * 30px) / 4);
   text-align: center;
-  background-color: var(--primary-white-color);
+  background-color: #ffffff;
   border-radius: 0 0 4px 4px;
   /* drop-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -683,7 +649,7 @@ img {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  color: var(--title-text-color);
+  color: #212121;
   margin-bottom: 50px;
 }
 
@@ -692,7 +658,7 @@ img {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
-  color: var(--title-text-color);
+  color: #212121;
   margin-bottom: 10px;
 }
 
@@ -717,14 +683,14 @@ img {
   height: 44px;
   align-items: center;
   justify-content: center;
-  color: var(--icon);
+  color: #afb1b8;
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list__link:hover, .social-list__link:focus {
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
+  color: #ffffff;
+  background-color: #2196f3;
 }
 
 .social-list__item:not(:last-child) {
@@ -745,7 +711,7 @@ img {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  color: var(--title-text-color);
+  color: #212121;
   margin-bottom: 50px;
 }
 
@@ -762,17 +728,17 @@ img {
   display: inline-flex;
   width: 170px;
   height: 92px;
-  border: 1px solid var(--icon);
+  border: 1px solid #afb1b8;
   border-radius: 4px;
   justify-content: center;
   align-items: center;
-  color: var(--icon);
+  color: #afb1b8;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients__link:hover, .clients__link:focus {
-  border: 1px solid var(--accent-color);
-  color: var(--accent-color);
+  border: 1px solid #2196f3;
+  color: #2196f3;
 }
 
 .clients__icon {
@@ -782,16 +748,16 @@ img {
 }
 
 .footer {
-  background-color: var(--primary-color-hf);
+  background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
-  color: var(--primary-white-color);
+  color: #ffffff;
 }
 
 .footer .social-list__link:hover,
 .footer .social-list__link:focus {
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
+  color: #ffffff;
+  background-color: #2196f3;
 }
 
 .social-list__footer {
@@ -799,8 +765,8 @@ img {
 }
 
 .footer .social-list__link {
-  color: var(--primary-white-color);
-  background-color: var(--icon-social-bg);
+  color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -816,7 +782,7 @@ img {
 
 .footer-contact__item a:hover,
 .footer-contact__item a:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .footer-contact__item:not(:last-child) {
@@ -834,7 +800,7 @@ img {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
-  color: var(--primary-white-color);
+  color: #ffffff;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -843,7 +809,7 @@ img {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
-  color: var(--footer-address-color);
+  color: rgba(255, 255, 255, 0.6);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -876,14 +842,14 @@ img {
   padding: 15px 16px;
   line-height: 1.25;
   font-size: 16px;
-  color: var(--footer-address-color);
+  color: rgba(255, 255, 255, 0.6);
   border: 1px solid rgba(255, 255, 255, 0.3);
   background: transparent;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer__input:hover, .footer__input:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196f3;
 }
 
 .footer__btn {
@@ -898,20 +864,20 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
-  background-color: var(--accent-color);
-  color: var(--primary-white-color);
+  background-color: #2196f3;
+  color: #ffffff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer__btn:hover, .footer__btn:focus {
-  background-color: var(--link-services-color);
+  background-color: #188ce8;
 }
 
 .footer__btn-icon {
   width: 24px;
   height: 24px;
   margin-left: 12px;
-  fill: var(--primary-white-color);
+  fill: #ffffff;
 }
 
 .nav-button {
@@ -957,9 +923,9 @@ img {
 
 .service__jpg-style {
   padding: 20px 24px;
-  border-bottom: 1px solid var(--portfolio-bg);
-  border-left: 1px solid var(--portfolio-bg);
-  border-right: 1px solid var(--portfolio-bg);
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
 }
 
 .filtr__btn {
@@ -975,16 +941,16 @@ img {
   font-size: 16px;
   line-height: 1.63;
   /* text-align: center; */
-  color: var(--title-text-color);
-  background-color: var(--secondary-bg-color);
+  color: #212121;
+  background-color: #f5f4fa;
   border: none;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filtr__btn:hover, .filtr__btn:focus {
-  background-color: var(--link-services-color);
-  color: var(--primary-white-color);
+  background-color: #188ce8;
+  color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -1000,8 +966,8 @@ img {
   width: 100%;
   height: 100%;
   padding: 63px 24px;
-  background-color: var(--bg-portfolio-overlay);
-  color: var(--primary-white-color);
+  background-color: rgba(33, 150, 243, 0.9);
+  color: #ffffff;
   opacity: 0;
   font-size: 18px;
   line-height: 1.56;
@@ -1015,7 +981,7 @@ img {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  color: var(--title-text-color);
+  color: #212121;
   margin-bottom: 4px;
 }
 
@@ -1024,7 +990,7 @@ img {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  color: #757575;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -1058,7 +1024,7 @@ img {
   top: 50%;
   left: 50%;
   padding: 40px;
-  background-color: var(--primary-white-color);
+  background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
@@ -1090,7 +1056,7 @@ img {
   padding-left: 5px;
   margin-bottom: 10px;
   margin-top: 0;
-  color: var(--title-text-color);
+  color: #212121;
 }
 
 .form-input {
@@ -1106,12 +1072,12 @@ img {
 }
 
 .form-input:hover, .form-input:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196f3;
 }
 
 .form-input:hover + .form-icon,
 .form-input:focus + .form-icon {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .submint-btn {
@@ -1124,22 +1090,22 @@ img {
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.06em;
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: none;
-  color: var(--primary-white-color);
+  color: #ffffff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 }
 
 .submint-btn:focus, .submint-btn:hover {
-  background-color: var(--link-services-color);
+  background-color: #188ce8;
 }
 
 .submit-btn:hover,
 .submit-btn:focus {
-  background-color: var(--link-services-color);
+  background-color: #188ce8;
 }
 
 .form-btn {
@@ -1153,7 +1119,7 @@ img {
 
 .form-field textarea:hover,
 .form-field textarea:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196f3;
 }
 
 .form-field textarea {
@@ -1176,7 +1142,7 @@ img {
 
 .form-label .form-input:hover,
 .form-label .form-input:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196f3;
 }
 
 .form-textarea::placeholder {
@@ -1197,12 +1163,12 @@ img {
 
 .checkbox-label input:checked ~ .icon-check {
   border: none;
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   background-origin: border-box;
 }
 
 .checkbox-label a {
-  color: var(--accent-color);
+  color: #2196f3;
   margin-left: 4px;
 }
 
@@ -1237,9 +1203,9 @@ img {
   width: 16px;
   height: 15px;
   margin-right: 7px;
-  border: 0.2px solid var(--title-text-color);
+  border: 0.2px solid #212121;
   border-radius: 2px;
-  fill: var(--primary-white-color);
+  fill: #ffffff;
 }
 
 input:focus,
