--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -2,7 +2,7 @@
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  color: var(--title-text-color);
+  color: $title-text-color;
   margin-bottom: 50px;
 }
 
@@ -19,18 +19,18 @@
   display: inline-flex;
   width: 170px;
   height: 92px;
-  border: 1px solid var(--icon);
+  border: 1px solid $icon;
   border-radius: 4px;
   justify-content: center;
   align-items: center;
-  color: var(--icon);
+  color: $icon;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
-    border: 1px solid var(--accent-color);
-    color: var(--accent-color);
+    border: 1px solid $accent-color;
+    color: $accent-color;
   }
 }
 
