--- a/sass/components/_filtr-section.scss
+++ b/sass/components/_filtr-section.scss
@@ -43,9 +43,9 @@
 
 .service__jpg-style {
   padding: 20px 24px;
-  border-bottom: 1px solid var(--portfolio-bg);
-  border-left: 1px solid var(--portfolio-bg);
-  border-right: 1px solid var(--portfolio-bg);
+  border-bottom: 1px solid $portfolio-bg;
+  border-left: 1px solid $portfolio-bg;
+  border-right: 1px solid $portfolio-bg;
 }
 
 .filtr__btn {
@@ -61,8 +61,8 @@
   font-size: 16px;
   line-height: 1.63;
   /* text-align: center; */
-  color: var(--title-text-color);
-  background-color: var(--secondary-bg-color);
+  color: $title-text-color;
+  background-color: $secondary-bg-color;
   border: none;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -71,8 +71,8 @@
 
   &:hover,
   &:focus {
-    background-color: var(--link-services-color);
-    color: var(--primary-white-color);
+    background-color: $link-services-color;
+    color: $primary-white-color;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
@@ -90,8 +90,8 @@
   width: 100%;
   height: 100%;
   padding: 63px 24px;
-  background-color: var(--bg-portfolio-overlay);
-  color: var(--primary-white-color);
+  background-color: $bg-portfolio-overlay;
+  color: $primary-white-color;
   opacity: 0;
   font-size: 18px;
   line-height: 1.56;
@@ -106,7 +106,7 @@
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  color: var(--title-text-color);
+  color: $title-text-color;
   margin-bottom: 4px;
 }
 
@@ -115,7 +115,7 @@
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
   margin-top: 0;
   margin-bottom: 0;
 }
