--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,13 +1,13 @@
 .footer {
-  background-color: var(--primary-color-hf);
+  background-color: $primary-color-hf;
   padding-top: 60px;
   padding-bottom: 60px;
-  color: var(--primary-white-color);
+  color: $primary-white-color;
 
   & .social-list__link:hover,
   & .social-list__link:focus {
-    color: var(--primary-white-color);
-    background-color: var(--accent-color);
+    color: $primary-white-color;
+    background-color: $accent-color;
   }
 }
 
@@ -16,8 +16,8 @@
 }
 
 .footer .social-list__link {
-  color: var(--primary-white-color);
-  background-color: var(--icon-social-bg);
+  color: $primary-white-color;
+  background-color: $icon-social-bg;
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -34,7 +34,7 @@
 .footer-contact__item {
   & a:hover,
   & a:focus {
-    color: var(--accent-color);
+    color: $accent-color;
   }
 
   &:not(:last-child) {
@@ -53,7 +53,7 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
-  color: var(--primary-white-color);
+  color: $primary-white-color;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -62,7 +62,7 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
-  color: var(--footer-address-color);
+  color: $footer-address-color;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -95,14 +95,14 @@
   padding: 15px 16px;
   line-height: 1.25;
   font-size: 16px;
-  color: var(--footer-address-color);
+  color: $footer-address-color;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background: transparent;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
-    border: 1px solid var(--accent-color);
+    border: 1px solid $accent-color;
   }
 }
 
@@ -118,14 +118,14 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
-  background-color: var(--accent-color);
-  color: var(--primary-white-color);
+  background-color: $accent-color;
+  color: $primary-white-color;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
-    background-color: var(--link-services-color);
+    background-color: $link-services-color;
   }
 }
 
@@ -133,5 +133,5 @@
   width: 24px;
   height: 24px;
   margin-left: 12px;
-  fill: var(--primary-white-color);
+  fill: $primary-white-color;
 }
