--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
-  background-color: var(--primary-white-color);
-  border-bottom: 1px solid var(--border-color);
+  background-color: $primary-white-color;
+  border-bottom: 1px solid $border-color;
 }
 
 .header .container {
@@ -12,7 +12,7 @@
 }
 
 .header-meny .current {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 
 .header-navigation {
@@ -54,7 +54,7 @@
 
   &:hover,
   &:focus {
-    color: var(--accent-color);
+    color: $accent-color;
   }
 }
 
@@ -63,12 +63,12 @@
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(--title-text-color);
+  color: $title-text-color;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
-    color: var(--accent-color);
+    color: $accent-color;
   }
 }
 
@@ -77,7 +77,7 @@
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
 }
 
 .header-meny__item {
@@ -92,7 +92,7 @@
   display: block;
   width: 100%;
   height: 4px;
-  background-color: var(--accent-color);
+  background-color: $accent-color;
   border-radius: 2px;
 }
 
@@ -105,6 +105,6 @@
 
   &:hover,
   &:focus {
-    fill: var(--accent-color);
+    fill: $accent-color;
   }
 }
