--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,7 +3,7 @@
   height: 600px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid var(--border-color);
+  outline: 1px solid $border-color;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -13,15 +13,15 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  color: var(--primary-white-color);
+  color: $primary-white-color;
   text-align: center;
 }
 
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: var(--primary-color-hf);
-  color: var(--primary-white-color);
+  background-color: $primary-color-hf;
+  color: $primary-white-color;
   text-align: center;
 }
 
@@ -44,17 +44,17 @@
   border: none;
 
   font-family: inherit;
-  background-color: var(--accent-color);
+  background-color: $accent-color;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-  color: var(--primary-white-color);
+  color: $primary-white-color;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
-    background-color: var(--link-services-color);
+    background-color: $link-services-color;
   }
 }
