--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,5 +1,5 @@
 .team {
-  background-color: var(--secondary-bg-color);
+  background-color: $secondary-bg-color;
 }
 
 .team__list {
@@ -12,7 +12,7 @@
 .team__item {
   flex-basis: calc((100% - 3 * 30px) / 4);
   text-align: center;
-  background-color: var(--primary-white-color);
+  background-color: $primary-white-color;
   border-radius: 0 0 4px 4px;
   /* drop-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -27,7 +27,7 @@
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  color: var(--title-text-color);
+  color: $title-text-color;
   margin-bottom: 50px;
 }
 
@@ -36,7 +36,7 @@
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
-  color: var(--title-text-color);
+  color: $title-text-color;
   margin-bottom: 10px;
 }
 
@@ -61,15 +61,15 @@
   height: 44px;
   align-items: center;
   justify-content: center;
-  color: var(--icon);
+  color: $icon;
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
-    color: var(--primary-white-color);
-    background-color: var(--accent-color);
+    color: $primary-white-color;
+    background-color: $accent-color;
   }
 }
 
