--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,43 +1,20 @@
-/* главный цвет фона background: #E5E5E5; */
-/* вторичный цвет фона background: #F5F4FA;
- */
-/* цвет футера color: #2F303A */
-/* цвет основной текста Р color: #757575;*/
-/* цвет текста Н1-Р3 color:#212121 ;*/
-/* белый цвет текста color: #FFFFFF;
- */
-/*  акцент синий цвет текста color: #2196F3 */
-/* цвет кнопки заказать услугу background: #188CE8;
- */
-/* цвет футера тел и эмейл color: #FFFFFF99;
- */
-
-:root {
-  --primary-text-color: #757575;
-  --title-text-color: #212121;
-  --accent-color: #2196f3;
-  --primary-white-color: #ffffff;
-  --primary-black-color: #000000;
-  --primary-color-hf: #2f303a;
-  --secondary-bg-color: #f5f4fa;
-  --link-services-color: #188ce8;
-  --footer-address-color: rgba(255, 255, 255, 0.6);
-  --border-color: #ececec;
-  --portfolio-bg: #eeeeee;
-  --color-bg: #e5e5e5;
-  --jpg-margin: 30px;
-  --icon: #afb1b8;
-  --icon-social-bg: rgba(255, 255, 255, 0.1);
-  --bg-overlay: rgba(47, 48, 58, 0.8);
-  --bg-portfolio-overlay: rgba(33, 150, 243, 0.9);
-  --bg-modal: rgba(0, 0, 0, 0.2);
-}
-
-body {
-  font-size: 14px;
-  font-weight: 400;
-  color: var(--primary-text-color);
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: 00.03em;
-  background-color: var(--primary-white-color);
-}
+$primary-text-color: #757575;
+$title-text-color: #212121;
+$accent-color: #2196f3;
+$primary-white-color: #ffffff;
+$primary-black-color: #000000;
+$primary-color-hf: #2f303a;
+$secondary-bg-color: #f5f4fa;
+$link-services-color: #188ce8;
+$footer-address-color: rgba(255, 255, 255, 0.6);
+$border-color: #ececec;
+$portfolio-bg: #eeeeee;
+$color-bg: #e5e5e5;
+$jpg-margin: 30px;
+$icon: #afb1b8;
+$icon-social-bg: rgba(255, 255, 255, 0.1);
+$bg-overlay: rgba(47, 48, 58, 0.8);
+$bg-portfolio-overlay: rgba(33, 150, 243, 0.9);
+$bg-modal: rgba(0, 0, 0, 0.2);
+$font: 'Roboto', sans-serif;
+$font-logo: 'Raleway', sans-serif;
